add js function to get user data from API, and insert dynamically into account view

--- a/eft-code-challenge.css
+++ b/eft-code-challenge.css
@@ -8,3 +8,10 @@
 .vertical-center {
   margin-top: 10%;
 }
+
+#profile-image {
+  width: 12rem;
+  height: 12rem;
+  border: .2rem solid #868e96;
+  margin: 1rem;
+}
