--- a/views/login.html
+++ b/views/login.html
@@ -13,14 +13,26 @@
     <div class="container">
       <div class="row">
         <div class="col-10 offset-1 vertical-center">
-          <div id="login-alert" class="alert alert-dismissable alert-danger fade show" role="alert">
-            Please login to access the Home and Account pages.
+          <div id="index-alert" class="alert alert-dismissable alert-danger fade show" role="alert">
+            Please login to access the Home page.
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div id="account-alert" class="alert alert-dismissable alert-danger fade show" role="alert">
+            Please login to access the Account page.
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
           <div id="invalid-alert" class="alert alert-dismissable alert-danger fade show" role="alert">
             Login failed. Email or password is incorrect.
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div id="logout-alert" class="alert alert-dismissable alert-info fade show" role="alert">
+            You are logged out.
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
